Bug 1460127: Fix null-deref to ensure that GPU processes launch and init properly. r=jimm